--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@ FROM nvcr.io/nvidia/tritonserver:24.05-pyt-python-py3
 
 LABEL description="Acorn dependencies based on the Triton Inference Server Python backend." \
       maintainer="Haoran Zhao <haoran.zhao@cern.ch>" \
-      version="0.1"
+      version="0.2"
 
 ENV DEBIAN_FRONTEND=noninteractive \
     TORCH_CUDA_ARCH_LIST="8.0+PTX" \
@@ -18,6 +18,8 @@ RUN apt-get update && apt-get install -y \
     uuid-dev \
     openssl \
     libssl-dev \
+    rapidjson-dev \
+    libb64-dev \
     && rm -rf /var/lib/apt/lists/* \
     && update-alternatives --install /usr/bin/python python /usr/bin/python3 1
 
@@ -40,6 +42,24 @@ RUN pip install torch==2.1.0+cu121 torchvision torchaudio --extra-index-url http
 # RUN pip install git+https://github.com/xju2/FRNN.git \
 #     && pip install git+https://github.com/asnaylor/prefix_sum.git \
 #     && rm -rf /root/.cache/pip
+
+# Install triton client
+RUN cd /tmp/ && git clone https://github.com/triton-inference-server/client.git \
+    && cd client && mkdir build && cd build \
+    && cmake .. -DTRITON_ENABLE_CC_HTTP=OFF \
+    -DTRITON_ENABLE_CC_GRPC=ON \
+    -DTRITON_ENABLE_GPU=ON \
+    -DTRITON_ENABLE_PERF_ANALYZER=ON \
+    -DTRITON_ENABLE_PERF_ANALYZER_C_API=ON \
+    -DCMAKE_CXX_STANDARD=17 \
+    -DTRITON_COMMON_REPO_TAG=r24.05 \
+    -DTRITON_THIRD_PARTY_REPO_TAG=r24.05 \
+    -DTRITON_CORE_REPO_TAG=r24.05 \
+    -DCMAKE_INSTALL_PREFIX=/usr/local \
+    && make -j20 cc-clients \
+    && cd ../.. && rm -rf client
+
+RUN apt-get clean -y && rm -rf /var/lib/apt/lists/* && rm -rf /tmp/*
 
 WORKDIR /workspace/
 
